Set components, style, MirageJS, Axios and React-Modal as dev dependency

--- a/expenses-tracker/public/index.html
+++ b/expenses-tracker/public/index.html
@@ -16,7 +16,7 @@
   <link rel="shortcut icon" href="favicon-16x16.png" type="image/png" />
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;500&display=swap"
     rel="stylesheet">
 
   <title>Expenses Tracker</title>
